Bug 125573 Call IME-W APIs instead of IME-A APIs to prevent moz from crashing only in Win2K-Chinese Simplified and WinXP-Chinese Simplified

/r=shanjian, /sr=brendan, /a=asa